[package]
name = "loan_calc"
version = "0.1.0"
authors = ["Nico Just <mail@njust.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.1.1"
iced_native = "0.2.2"
iced_wgpu = "0.2.3"
rust_decimal_macros = "1.6.0"
rust_decimal = "1.6.0"